[package]
name = "wasmedge_hyper_rustls"
version = "0.1.1"
edition = "2021"
description = """
Support HTTPS and TLS connection in hyper-rs applications that are compiled to Wasm (WebAssembly)
"""
license = "Apache-2.0"
repository = "https://github.com/second-state/wasmedge_hyper_rustls"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
hyper_wasi = { version = "0.15", features = ["full"] }
tokio_wasi = { version = "1", features = [
    "rt",
    "macros",
    "net",
    "time",
    "io-util",
] }
pretty_env_logger = "0.5.0"
wasmedge_rustls_api = { version = "0.1.0", features = ["tokio_async"] }
